2009-11-27  Marek Safar  <marek.safar@gmail.com>

	* skeleton.cs: Add global state stacks.

2008-10-17  Jonathan Pryor  <jpryor@novell.com>

	* Makefile: Add doc-update target support.

2008-09-09  Miguel de Icaza  <miguel@novell.com>

	* skeleton.cs: A little refactoring to support producing a list of
	tokens as opposed to a list of token strings for code that uses
	the yyExpecting code.

2006-05-29  Raja R Harinath  <rharinath@novell.com>

	* skeleton.cs: Implement a better translation for named-loop continues.
	Remove "unreachable code" warnings in the generated code.

2006-04-03  Zoltan Varga  <vargaz@gmail.com>

	* output.c skeleton skeleton.cs: Initialize the jay debug tables
	lazily. Fixes #77946.

2006-03-10  Zoltan Varga  <vargaz@gmail.com>

	* reader.c (copy_action): Applied patch from Axel T Schreiner (ats@cs.rit.edu).
	Fixes a small bug.

2006-03-04  Martin Baulig  <martin@ximian.com>

	* skeleton.cs: Don't call yyerror if `yyErrorFlag == 0', so we can
	recover from errors with an `error' token.  See gtest-248.cs for
	an example.

2006-01-06 Wade Berrier <wberrier@novell.com>

	* Makefile: fix man path

2005-09-20 Konstantin Triger <kostat@mainsift.com>

	* Added jay.vcproj to build jay on pure Win32

2005-03-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile (install-local, uninstall-local): Disable when
	NO_INSTALL is defined.

2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* Makefile (uninstall-local): Remove $(prefix)/man/man1/jay.1.

2004-11-24  Miguel de Icaza  <miguel@ximian.com>

	* skeleton.cs: use yacc_verbose_flag to control verbosity.

2004-06-10  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	
	* skeleton.cs: oops some uses of changed classes/interfaces also need to become internal.

2004-06-10  Atsushi Enomoto <atsushi@ximian.com>

	* skelton.cs: make classes/interfaces internal.

2004-06-03  Atsushi Enomoto <atsushi@ximian.com>

	* Makefile : ignore make run-test-ondotnet.
